# custom_rag_azure

./: .gitignore  README.md  app.py  config.py  ingest.py  inspect_conns.py  main.bicep  main.py  pyproject.toml  requirements.txt  setup.sh
agents/: setup_agents.py
evaluation/: run_evals.py
ingestion/: fetch_and_index.py
